@@ -26,19 +26,19 @@ namespace fg {
 
         /// Return the result of the GET request
         std::pair<boost::shared_ptr<fostlib::mime>, int > get(
-            frame &stack, const fostlib::string &path);
+            frame &stack, const fostlib::string &path, int expected_status);
         /// Return the result of the PATCH request
         std::pair<boost::shared_ptr<fostlib::mime>, int > patch(
-            frame &stack, const fostlib::string &path, const fostlib::json &data);
+            frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status);
         /// Return the result of the PUT request
         std::pair<boost::shared_ptr<fostlib::mime>, int > put(
-            frame &stack, const fostlib::string &path, const fostlib::json &data);
+            frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status);
         /// Return the result of the POST request
         std::pair<boost::shared_ptr<fostlib::mime>, int > post(
-            frame &stack, const fostlib::string &path, const fostlib::json &data);
+            frame &stack, const fostlib::string &path, const fostlib::json &data, int expected_status);
         /// Return the result of the DELETE request
         std::pair<boost::shared_ptr<fostlib::mime>, int > del(
-            frame &stack, const fostlib::string &path);
+            frame &stack, const fostlib::string &path, int expected_status);
     };
 
 
